--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-responsive-spritesheet": "^2.3.9",
+    "react-router-dom": "^6.26.1",
+    "react-spritesheet": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
